updated first time setup